<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Correos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btEntrar">Entrar</string>
    <string name="lbUsuario">Usuario: </string>
    <string name="lbPass">Password: </string>
    <string name="tbUsuario"/>
    <string name="tbPass"/>
    <string name="tbAsunto"/>
    <string name="tbMensaje"/>
    <string name="lbAsunto">Asunto</string>
    <string name="lbMensaje">Mensaje</string>

</resources>
